--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  body {
+    @apply bg-gradient-to-r from-slate-300 to-blue-800;
+  }
+
   h1 {
     @apply text-2xl;
   }
