--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -9,7 +9,6 @@
         </title>
         <link rel="icon"
             href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>" />
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -20,10 +19,13 @@
     </head>
     <body class="container mx-auto">
         <header class="app_header">
-          <h1>Merkle Airdrop Demo App</h1>
-          {{ include('./_account.html.twig') }}
+            <h1>
+                <a href="{{ path('app_home') }}">Merkle Airdrop Demo App</a>
+            </h1>
+            {{ include('./_account.html.twig') }}
         </header>
         {% block body %}
+
         {% endblock %}
     </body>
 </html>
