--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -29,6 +29,20 @@ nav button {
     @apply cursor-pointer;
 }
 
+/* profile
+ ------------------------------------------------------------*/
+.panel {
+    display: none;
+    position: absolute;
+    background: #222;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 90%;
+    z-index: 20;
+}
+
 /* table
  ------------------------------------------------------------*/
 
