feat(pages): add homepage and profile settings

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1,4 +1,9 @@
 @tailwind base;
+
+body {
+    @apply bg-blue-200;
+}
+
 @tailwind components;
 
 .btn {
@@ -41,6 +46,10 @@ nav button {
     border-radius: 4px;
     font-size: 90%;
     z-index: 20;
+}
+
+#user-dropdown ul li a {
+    @apply block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white;
 }
 
 /* table
