feat(profile): display balance

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -101,4 +101,19 @@ nav button {
     @apply rounded-r-lg;
 }
 
+/* homepage
+ ------------------------------------------------------------*/
+
+.recent-airdrops h2 {
+    @apply font-bold border-sky-400;
+}
+
+.recent-airdrops p {
+    @apply font-thin;
+}
+
+.recent-airdrops button {
+    @apply py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200;
+}
+
 @tailwind utilities;
