--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -1,7 +1,120 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 body {
-    background-color: skyblue;
+    @apply bg-blue-200;
 }
+
+@tailwind components;
+
+.btn {
+    @apply px-4 py-2 font-semibold shadow-md;
+}
+
+.btn-sync {
+    @apply text-white bg-blue-500 rounded;
+}
+
+.input.text {
+    @apply block;
+}
+
+.input.text > input {
+    @apply mt-1 block w-1/3;
+}
+
+.submit input {
+    @apply cursor-pointer;
+}
+
+#mobile-menu-2 a {
+    @apply block py-2 pl-3 pr-4 text-white md:p-0;
+}
+
+nav button {
+    @apply cursor-pointer;
+}
+
+/* profile
+ ------------------------------------------------------------*/
+.panel {
+    display: none;
+    position: absolute;
+    background: #222;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 90%;
+    z-index: 20;
+}
+
+#user-dropdown ul li a {
+    @apply block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white;
+}
+
+/* table
+ ------------------------------------------------------------*/
+
+.table-responsive {
+    @apply w-full text-sm text-left text-gray-500;
+}
+
+.table-responsive thead {
+    @apply text-xs text-gray-700 uppercase bg-gray-50;
+}
+
+.table-responsive th, .table-responsive td {
+    @apply px-6 py-3;
+}
+
+.table-responsive tbody tr {
+    @apply bg-white border-b;
+}
+
+/* paginator
+ ------------------------------------------------------------*/
+
+.paginator {
+    @apply flex my-6 align-middle;
+}
+.pagination, .paginator p {
+    @apply inline-flex;
+}
+
+.paginator p {
+    @apply text-gray-500 self-center ml-3 italic;
+}
+
+.pagination li {
+    @apply px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700;
+}
+
+.pagination li.active {
+    @apply bg-gray-100 text-gray-700;
+}
+
+.first, .prev.disabled {
+    @apply ml-0 rounded-l-lg;
+}
+
+.last, .next.disabled {
+    @apply rounded-r-lg;
+}
+
+/* homepage
+ ------------------------------------------------------------*/
+
+.recent-airdrops { @apply p-4; }
+.recent-airdrops h2 {
+    @apply text-xl font-extrabold ;
+}
+
+.recent-airdrops p {
+    @apply font-thin;
+}
+
+.recent-airdrops button {
+    @apply py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200;
+}
+
+@tailwind utilities;
