--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -20,14 +20,14 @@
                     <div class="max-w-screen-xl flex flex-wrap items-center justify-between p-4">
                         <a href="{{ path('app_home') }}" class="self-center text-2xl font-semibold whitespace-nowrap">Tezos Airdrops</a>
                         {% if is_granted('ROLE_MEMBER') %}
-                            <div x-data="profile" class="flex items-center md:order-2">
+                            <div x-data="{}" class="flex items-center md:order-2">
                                 <button @click="$float({offset: 10}, {trap: true})" type="button" class="flex mr-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
                                     <span class="sr-only">Open user menu</span>
                                     <img class="w-8 h-8 rounded-full" src="https://pbs.twimg.com/profile_images/1660739913631817728/WM93OmoG_reasonably_small.jpg" alt="user photo">
                                 </button>
                                 <div x-ref="panel" class="panel z-50 my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
                                     <div class="px-4 py-3">
-                                        <span class="block text-sm text-gray-900 dark:text-white"><?= $this->Tz->shortenAddress($this->Identity->get('address')) ?></span>
+                                        <span class="block text-sm text-gray-900 dark:text-white">{{ app.user.address }}</span>
                                         <span class="block text-sm  text-gray-500 truncate dark:text-gray-400">
                                             <!-- <?= $this->request->getSession()->read('network', 'local') ?> -->
                                             <!-- <?= $this->cell('Balance', [], [ -->
