--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -27,7 +27,7 @@
                                 </button>
                                 <div x-ref="panel" class="panel z-50 my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
                                     <div class="px-4 py-3">
-                                        <span class="block text-sm text-gray-900 dark:text-white">{{ app.user.address }}</span>
+                                        <span class="block text-sm text-gray-900 dark:text-white">{{ app.user.address|shortenAddress }}</span>
                                         <span class="block text-sm  text-gray-500 truncate dark:text-gray-400">
                                             <!-- <?= $this->request->getSession()->read('network', 'local') ?> -->
                                             <!-- <?= $this->cell('Balance', [], [ -->
@@ -51,7 +51,7 @@
                         {% else %}
                             <div x-data="beacon" class="flex items-center md:order-2">
                                 <button @click="login('{{ csrf_token('authenticate') }}')">Sync</button>
-                                <span x-show="error" class="text-red-600 font-semibold"><span x-text="error"></span></span>
+                                <span x-show="error" class="text-red-300 font-semibold pl-3"><span x-text="error"></span></span>
                             </div>
                         {% endif %}
                         <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 md:ml-20" id="mobile-menu-2">
@@ -77,7 +77,7 @@
             </div>
             <main class="container mx-auto">
                 <div class="container">
-        {% block body %}{% endblock %}
+                  {% block body %}{% endblock %}
                 </div>
             </main>
         </div>
