--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -1,6 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tezos Airdrops{% endblock %}
+{% block title %}
+  Tezos Airdrops
+{% endblock %}
 
-{% block content %}
+{% block body %}
+  {% for airdrop in recentAirdrops %}
+    <h3>{{ airdrop.name }} ({{ airdrop.nb_recipients }} recipients)</h3>
+    <p>{{ airdrop.description }}</p>
+  {% else %}
+    <p>
+      No airdrop found.
+    </p>
+  {% endfor %}
 {% endblock %}
