up routing,vite,icons

--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -4,5 +4,8 @@
 // Variables
 @import 'variables';
 
+// Bootstrap Icons
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
